Update: SampleFramework now uses a 'PythonOgre' overlay
Update: SampleFramework will now look for plugins.cfg or plugins.cfg.<platform name> ('nt' or 'linux') in the current and
        parent directories -- this will allow a single demo tree to automatically work on any platform unstead of the 
        current suitation of having to manually edit the plugins file.. 


November 14 2008 : Release 1.6.0 
==================================
Run "python ReportVersion.py" to get the module version information

** Various Fixes/Changes ** 
Fix: PSSM camera functionality - it was missing from the sizeof.h file
Fix: Smart pointer handling in Ogre -- getting clever about detecting them as arguments as well as return types
Fix: QuickGui with static consts not having default value and causing a boost load error
Fix/Update/Change: Removed constant 'vars' and replaced them with properties that return a copy of the object. 
     Specifically ZERO, UNIT_X, UNIT_Y, UNIT_Z, Black, White, Red, Green, Blue in Classes ColourValue, MatrixX, 
     Quaternion and VectorX.
     This is due to the fact they were actually passing a pointer to a non constant (mutable) variable which 
     caused very annoying bugs.  So now Ogre.Vector3.ZERO has to be replaced with Ogre.Vector3().ZERO etc...
Fix: Auto transform funtion to not wrap reference arguments that are const (bug)
Fix: Auto transform funtion to handle extern free functions
Fix: to Py++ to handle bool/int references correctly (renderQueueListener functions)
Fix: a couple of incorrect versions in environment.py
Fix: code generation for QuickGui, bullet and noise to correctly generate PyDoc documentation strings

Change: All code generation modules to use the common_code Auto_Functional_Transformation function
Change: Added helper functions to OgreODE as constructors needed hand wrapping (makeTriangleMeshGeometry, makeConvexGeometry)
Change: Simplified Ogre patch file requirements due to fix in Py++ for bool refs